frame/support/test/tests/construct_runtime_ui/conflicting_index_2.stderr
error: Module index are conflicting both modules Pallet3 and System are at index 5
  --> $DIR/conflicting_index_2.rs:12:3
   |
12 |         Pallet3: pallet3::{},
   |         ^^^^^^^
